# dnd_spell_chatbot

./: .gitignore  ChatbotAssistant.py  LICENSE.md  README.md  SPACY_INTEGRATION.md  chatbot_model.pth  demo_spacy_chatbot.py  dimensions.json  main.py  pyproject.toml  requirements.txt  test_basic_spacy.py  test_full_integration.py  test_isolated_spacy.py  test_spacy_classifier.py  test_spacy_integration.py  test_standalone_spacy.py  train_spacy_model.py
src/: main.py  train.py
src/chatbot_core/: __init__.py  assistant.py  chatbot_interface.py  chatbot_model.py  model_data.py  ner_interface.py  trainer.py
src/chatbot_dnd_spells/: .gitignore  chatbot.py  chatbot_config.py  chatbot_trainer.py  colors.py  data_processor.py  spell__vector_searcher.py  spell_entity_classifier.py  spell_ner.py  spell_searcher.py
src/coreference_resolution/: __init__.py  chat_context.py  coreference_resolver.py  data_classes.py
src/dnd_spell_chatbot/: __init__.py  chatbot.py  chatbot_assistant.py  chatbot_trainer.py  main.py  ner_interface.py  spell_ner.py  spell_searcher.py
src/embeddings/: __init__.py  context_chunker_interface.py  data_classes.py  db_queries.py  db_setup.py  embedder.py  sentence_chunker.py  spell_embedder.py  spell_searcher.py  vector_searcher.py
src/entity_classification/: classifier_interface.py  entity_rule_classifier.py
src/entity_recognition/: __init__.py  classifier_interface.py  data_classes.py  entity_context.py  entity_rule_classifier.py  single_fuzzy_classifier.py
src/intents/: __init__.py  assistant.py  intent_classifier.py  trainer.py
(+22 files in other folders)
