[project]
name = "dnd-spell-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "pip>=25.2",
    "python-levenshtein>=0.27.1",
    "rapidfuzz>=3.14.0",
    "sentence-transformers>=5.1.0",
    "spacy>=3.8.0",
    "spaczz>=0.6.1",
    "sqlite-vec>=0.1.6",
    "torch>=2.8.0",
]
